--- a/portfolio/src/components/tasks-dashboard/dashboard.css
+++ b/portfolio/src/components/tasks-dashboard/dashboard.css
@@ -79,3 +79,44 @@
     color: gray;
     font-size: 0.83em;
 }
+
+.assignment-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    
+}
+
+.projects-header {
+    width: 1000px;
+    margin-bottom: 20px;
+}
+
+.add-project-btn {
+    display: block;                  /* Делает кнопку широкой */
+    width: 100%;                     /* На всю ширину контейнера */
+    color: #333;                     /* Темный текст */
+    text-decoration: none;           /* Убираем подчеркивание */
+    padding: 14px 18px;              /* Размер кнопки */
+    border-radius: 10px;             /* Плавные углы */
+    font-weight: 600;
+    text-align: center;              /* Центр текста */
+    transition: 0.2s ease;           /* Анимация */
+
+    background: #f9f9f9;
+    border-radius: 8px;
+    padding: 30px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+
+    margin-top: 4vh;
+}
+
+.add-project-btn:hover {
+    background-color: #d5d5d5;
+}
+
+.add-project-btn:active {
+    background-color: #c9c9c9;
+}
