--- a/portfolio/src/pages/home.css
+++ b/portfolio/src/pages/home.css
@@ -1,6 +1,7 @@
 .comment-section {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     padding-inline: 1.5vw;
     gap: 2vw;
 }
