--- a/portfolio/src/components/media/media.css
+++ b/portfolio/src/components/media/media.css
@@ -19,6 +19,7 @@
     gap: 10px;
 
     max-width: 400px;
+    height: fit-content;
     
     width: fit-content;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
