--- a/portfolio/src/components/welcome-banner/banner.css
+++ b/portfolio/src/components/welcome-banner/banner.css
@@ -14,3 +14,15 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     text-align: center;
 }
+
+.links {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+
+    align-self: center;
+}
+
+.links a {
+    color: gray;
+}
