general changes to fit requirements

--- a/portfolio/src/pages/detail.css
+++ b/portfolio/src/pages/detail.css
@@ -1,9 +1,8 @@
 .comment-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     padding-inline: 1.5vw;
-    gap: 2vw;
 }
 
 .comments-title {
